service/main/default/objects/AutoResponseFormDisplay__mdt/AutoResponseFormDisplay__mdt.object-meta.xml
<CustomObject>
    <description>Determines which fields to display in a Service auto-response form.</description>
    <label>Auto-Response Form Display</label>
    <pluralLabel>Auto-Response Form Displays</pluralLabel>
</CustomObject>