service/main/default/objects/AutoResponseFormDisplay__mdt/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>Service floor.</description>
    <inlineHelpText>Must correspond to an existing Service record type&#39;s API name for the form to work.</inlineHelpText>
    <label>Floor</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>