service/main/default/objects/AutoResponseFormDisplay__mdt/fields/RequiredFields__c.field-meta.xml
<CustomField>
    <fullName>RequiredFields__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>Form&#39;s mandatory fields.</description>
    <inlineHelpText>Fields&#39; API names semi-colon-separated.</inlineHelpText>
    <label>Required Fields</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>