service/main/default/objects/AutoResponseFormDisplay__mdt/fields/VisibleFields__c.field-meta.xml
<CustomField>
    <fullName>VisibleFields__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>Fields to display in the form.</description>
    <inlineHelpText>Fields&#39; API names semi-colon-separated.</inlineHelpText>
    <label>Visible Fields</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>