service/main/default/objects/AutoResponseFormDisplay__mdt/listViews/Details.listView-meta.xml
<ListView>
    <fullName>Details</fullName>
    <columns>MasterLabel</columns>
    <columns>Floor__c</columns>
    <columns>VisibleFields__c</columns>
    <columns>RequiredFields__c</columns>
    <filterScope>Everything</filterScope>
    <label>Details</label>
</ListView>